Revision history for Business::Shipping
=======================================

2.01  


  UPS_Offline
  
    * [Fixed] 331 origination zip codes cannot find zone file.

  Misc
  
    * Minor POD fix.  Found by CPAN Tester Josts Smokehouse 
      <Jost.Krieger+smokeback[at]ruhr-uni-bochum.de>.  


2.00  Aug 14 2005


  General
  
    * Remove get_grouped_attrs() debug print.
    
    * Remove old tests.
    
    * Remove dependancy on Scalar::Util

  UPS_Offline
  
    * Fix Delivery Area Surcharge for zip codes over 46000.
      - Caused by truncated data table.
      
    * Use a binary search for the Delivery Area Surcharge for speed.

    * Fix Residential surcharge (differential).
      - Only apply to the correct services
      - Do not apply twice for Ground Residential.
      
    * Add a residential indicator to the automatic tests.
    
    * Fix incorrect usage of gndres/gndcomm for hundredweight.
    
    * Make residential differential configurable in config.ini
    
    * New method for determining if a shipment is via ground or air.
  

1.92  Aug 03 2005


  General
  
    * We need a little more testing before we bump the version to 2.0, 1.91 was
      not released.
      
    * Replace the ClassAttribs/ClassInfo system with a simpler one. 
      - This resolves the incompatibility with mod_perl and other frameworks,
        since we no longer 'use' ficticious and non-existant modules.
      - The cache feature should be thoroughly tested with the new code.
      - The cache will no longer distinguish between multi-package shipments,
        therefore, multipackage shipments disable the cache.
      - Two new tests.
      - Can remove dependancy on Scalar::Util after this is complete (since
        we'll no longer need the 'blessed' function).      
      
    
    * POD::Coverage tests did not have a plan.
    
    * Disable POD::Coverage unless the user *really* wants to run it.
    